...
                                ]
                      )
                      .reduce((previousValue, currentValue) => previousValue.concat(currentValue), []))
        ]
    };

    return topBar("Accordion", content, isDarkMode);
};

export const getProperties = (values: AccordionPreviewProps, defaultProperties: Properties): Properties => {
    values.groups.forEach((group, index) => {
        if (group.headerRenderMode === "text") {
            hidePropertyIn(defaultProperties, values, "groups", index, "headerContent");
...
