...

/**
 * Shows a confirmation dialog during the execution of a nanoflow, to make perform actions based on the user input.
 * @param {string} titleCaption - Set to empty to use default text 'Confirmation'. (Only for native)
 * @param {string} question - This field is required.
 * @param {string} cancelButtonCaption - Set to empty to use default text 'Cancel'.
 * @param {string} proceedButtonCaption - Set to empty to use default text 'OK'.
 * @returns {Promise.<boolean>}
 */
export async function ShowConfirmation(
    titleCaption?: string,
    question?: string,
    cancelButtonCaption?: string,
...
