appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Safe area view"
          timeout: 10000
- tapOn:
    text: "Safe area view"
- tapOn:
    text: "Image"
- assertVisible:
    id: "image1"
- takeScreenshot:
    path: "maestro/images/actual/${PLATFORM}/safe_area_view_image"
- assertScreenshot:
    path: "maestro/images/expected/${PLATFORM}/safe_area_view_image.png"
