appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Safe area view"
          timeout: 10000
- tapOn:
    text: "Safe area view"
- tapOn:
    text: "Maps"
- assertVisible:
    text: "Information"
    optional: true
- tapOn:
    text: "OK"
    optional: true
# - takeScreenshot:
#     path: "maestro/images/actual/${PLATFORM}/SafeAreaViewMaps"

