appId: "${APP_ID}"
---
- runFlow:
    file: "../../../../../../maestro/Precondition.yaml"
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          text: "S"
      - extendedWaitUntil:
          visible: "Signature"
          timeout: 10000
- tapOn:
    text: "Signature"
- swipe:  
    start: 50%, 36% 
    end: 10%, 75% 
- tapOn:
    text: "Clear"
- assertVisible: 
    text: "Signature"
- swipe:  
    start: 50%, 36% 
    end: 10%, 75% 
- tapOn:
    text: "Save"
# Widgets menu will be visible only after successfully saving the signature, as the nanoflow has a Close page action to navigate back to the widgets menu.
- assertVisible: 
    text: "Widgets menu"
